# lidar_align

./: .gitignore  CMakeLists.txt  pyrightconfig.json
config/: config.yaml
include/lidar_align/: aligner.h  common.h  loader.h  sensors.h
scripts/: evo.sh  plot.py  plot_all.py  plot_single.py  test.py
src/: aligner.cpp  combainclouds.cpp  common.cpp  lidar_align_node.cpp  lidar_align_node_origin.cpp  loader.cpp  sensors.cpp  test.cpp  tools.cpp  tum_tools.cpp
